refactoring as per email